GNOME Bugzilla – Bug 789706
Fix invalid unref in artwork pixbuf
Last modified: 2017-10-31 22:13:14 UTC
Created attachment 362626 [details] [review] shell: remove extra pixbuf unref The following message is displayed: sys:1: Warning: g_object_unref: assertion 'G_IS_OBJECT (object)' failed when g_object_unref (loader) is executed, as pixbuf is already unref'd, though loader owns it.
Review of attachment 362626 [details] [review]: pushed as commit 1b4d16f62. Can you start putting the bug URL in the commit message please?
(In reply to Jonathan Matthew from comment #1) > Review of attachment 362626 [details] [review] [review]: > > pushed as commit 1b4d16f62. > > Can you start putting the bug URL in the commit message please? Sure.