shell: remove extra pixbuf unref

https://bugzilla.gnome.org/show_bug.cgi?id=789706